--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name" : "mrprompt/silex-soundcloud",
   "description" : "Silex SoundCloud Provider",
-  "license" : "GPLv3",
+  "license" : "MIT",
   "type": "library",
   "minimum-stability": "dev",
   "autoload" : {
@@ -26,7 +26,7 @@
     "php": ">=7.0",
     "ext-curl": "*",
     "ext-json": "*",
-    "njasm/soundcloud": "dev-master"
+    "njasm/soundcloud": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.1",
