--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,12 @@ matrix:
     - php: hhvm
     - php: hhvm-nightly
 
-
 before_script:
   - composer selfupdate
   - composer install --dev --prefer-dist
 
 script:
-  - ./vendor/bin/phpunit
+  - ./vendor/bin/phpunit --coverage-clover tmp/clover.xml
+
+after_success:
+  - ./vendor/bin/test-reporter --coverage-report tmp/clover.xml
